responsive navbar and sidebar

--- a/index.html
+++ b/index.html
@@ -2,7 +2,10 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" >
-    <link rel="icon" href="/Logo.png"  />
+    <link rel="icon" href="/navlogo.png">
+    <style>
+@import url('https://fonts.googleapis.com/css2?family=Bungee+Shade&family=Manrope:wght@200..800&family=Sevillana&display=swap');
+</style>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>MUSICO </title>
   </head>
