--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" >
     <link rel="icon" href="/navlogo.png">
 
-        <link href="https://fonts.googleapis.com/css2?family=Tektur&display=swap" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css2?family=Inconsolata&display=swap" rel="stylesheet">
     <style>
 @import url('https://fonts.googleapis.com/css2?family=Bungee+Shade&family=Manrope:wght@200..800&family=Sevillana&display=swap');
 </style>
